2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Improve calling convention documentation.

2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Fix a minor documentation issue.
	  
2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/SDCCmain.c,
	  sdcc/src/mos6502/main.c,
	  sdcc/device/lib/mos6502/crt0.s,
	  sdcc/device/lib/mos6502/_strcpy.s,
	  sdcc/device/lib/mos6502/_strcmp.s,
	  sdcc/device/lib/mos6502/_setjmp.c,
	  sdcc/device/lib/mos6502/_mullong.s,
	  sdcc/device/lib/mos6502/_mulint.s,
	  sdcc/device/lib/mos6502/_divulong.s,
	  sdcc/device/lib/mos6502/_divuint.s,
	  sdcc/device/lib/mos6502/__memcpy.s,
	  sdcc/device/lib/mos6502-stack-auto/crt0.s,
	  sdcc/device/lib/mos6502-stack-auto/_setjmp.c:
	  Rename linker segments.

2022-02-21 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3327.

2022-02-19 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCast.c:
	  Fix an issue in the fix for bug #3320.

2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3322.
	* support/regression/tests/bug-3320.c:
	  Test for bug #3320.

2022-02-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (gatherImplicitVariables): fix bug #3320

2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3322.c:
	  Test for bug #3322.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Preparations for 4.2.0.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3289.c:
	  Test for recently-fixed bug #3289.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Avoid generating illegal 6502 instructions in a few corner cases.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>
